--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.2.1",
     "escape-string-regexp": "^1.0.5",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.1",
     "popper.js": "^1.14.6",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-responsive-carousel": "^3.1.45",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
